--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container-fluid">
       <!-- navbar -->
-      <div class="row mt-1 sticky-top">
+      <div class="row mt-1 sticky-top nav-top">
         <ul class="d-flex align-items-center nav-top">
           <div
             class="col d-flex align-items-center justify-content-start gap-2"
