--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                     width="24px"
                   />
                 </span>
-                <span>KR$NA</span>
+                <span>KRSNA</span>
               </a>
             </li>
             <li class="nav-item">
@@ -796,32 +796,32 @@
                   <div class="vid mb-5">
                     <a
                       class="vid-link"
-                      href="https://youtu.be/VDrO044VHpY"
+                      href="https://youtu.be/SenClIIneMI"
                       target="_blank"
                     >
                       <img
                         class="thumbnail"
-                        src="https://i.ytimg.com/vi/VDrO044VHpY/maxresdefault.jpg"
+                        src="https://i.ytimg.com/vi/SenClIIneMI/maxresdefault.jpg"
                         width="360"
                         height="203"
                       />
                       <div class="vid-details mt-2">
                         <span class="d-flex">
                           <img
-                            src="https://yt3.ggpht.com/ytc/AL5GRJUaf2Zjn33GELDEhSwol9qk-vVJ52-C8i1UPsZj-9k=s88-c-k-c0x00ffffff-no-rj-mo"
+                            src="https://yt3.ggpht.com/ytc/AL5GRJWX0AY6ndjq2F3EcLvu8wYXd_MHCFlUuSqN90hzdQ=s88-c-k-c0x00ffffff-no-rj-mo"
                             class="profile-icon channel-logo"
                             width="36px"
                             height="36px"
                           />
                           <span class="vid-title text-light fs-6 mb-1"
-                            >Dooriyan - Dino James ft. Kaprila [Official Music
-                            Video]</span
+                            >KR$NA - Lil Bunty | Official Music Video (Prod.
+                            Flamboy)</span
                           >
                         </span>
 
                         <span class="channel-details text-secondary">
-                          <span class="channel-name">Dino James</span>
-                          <p class="vid-time">74M views 3 years ago</p>
+                          <span class="channel-name">KRSNA</span>
+                          <p class="vid-time">18M views 10 months ago</p>
                         </span>
                       </div>
                     </a>
@@ -897,32 +897,32 @@
                   <div class="vid">
                     <a
                       class="vid-link"
-                      href="https://youtu.be/mrTbs7ukMJw"
+                      href="https://youtu.be/S5FyS7tQuUw"
                       target="_blank"
                     >
                       <img
                         class="thumbnail"
-                        src="https://i.ytimg.com/vi/mrTbs7ukMJw/maxresdefault.jpg"
+                        src="https://i.ytimg.com/vi/S5FyS7tQuUw/maxresdefault.jpg"
                         width="360"
                         height="203"
                       />
                       <div class="vid-details mt-2">
                         <span class="d-flex">
                           <img
-                            src="https://yt3.ggpht.com/G05QiYlOU6xj5V9weBE2MpHkF4yYRGqgIJ6Lwp5YuVRHh148erDvgo8m8mbZAkXPTnKzPPa8Gg=s88-c-k-c0x00ffffff-no-rj"
+                            src="https://yt3.ggpht.com/ytc/AL5GRJXjXiwZeDrqvcm5zqWRFJNt4OIH9WO-unvxTk1YEQ=s88-c-k-c0x00ffffff-no-rj"
                             class="profile-icon channel-logo"
                             width="36px"
                             height="36px"
                           />
                           <span class="vid-title text-light fs-6 mb-1"
-                            >TSM Entity WE ARE READY....again - PMPL 2020
-                            Teaser</span
+                            >Coke Studio | Season 14 | Phir Milenge | Faisal
+                            Kapadia x Young Stunners</span
                           >
                         </span>
 
                         <span class="channel-details text-secondary">
-                          <span class="channel-name">TSM India</span>
-                          <p class="vid-time">490K views 2 years ago</p>
+                          <span class="channel-name">Coke Studio</span>
+                          <p class="vid-time">15M views 1 year ago</p>
                         </span>
                       </div>
                     </a>
@@ -967,32 +967,32 @@
                   <div class="vid">
                     <a
                       class="vid-link"
-                      href="https://youtu.be/S5FyS7tQuUw"
+                      href="https://youtu.be/mrTbs7ukMJw"
                       target="_blank"
                     >
                       <img
                         class="thumbnail"
-                        src="https://i.ytimg.com/vi/S5FyS7tQuUw/maxresdefault.jpg"
+                        src="https://i.ytimg.com/vi/mrTbs7ukMJw/maxresdefault.jpg"
                         width="360"
                         height="203"
                       />
                       <div class="vid-details mt-2">
                         <span class="d-flex">
                           <img
-                            src="https://yt3.ggpht.com/ytc/AL5GRJXjXiwZeDrqvcm5zqWRFJNt4OIH9WO-unvxTk1YEQ=s88-c-k-c0x00ffffff-no-rj"
+                            src="https://yt3.ggpht.com/G05QiYlOU6xj5V9weBE2MpHkF4yYRGqgIJ6Lwp5YuVRHh148erDvgo8m8mbZAkXPTnKzPPa8Gg=s88-c-k-c0x00ffffff-no-rj"
                             class="profile-icon channel-logo"
                             width="36px"
                             height="36px"
                           />
                           <span class="vid-title text-light fs-6 mb-1"
-                            >Coke Studio | Season 14 | Phir Milenge | Faisal
-                            Kapadia x Young Stunners</span
+                            >TSM Entity WE ARE READY....again - PMPL 2020
+                            Teaser</span
                           >
                         </span>
 
                         <span class="channel-details text-secondary">
-                          <span class="channel-name">Coke Studio</span>
-                          <p class="vid-time">15M views 1 year ago</p>
+                          <span class="channel-name">TSM India</span>
+                          <p class="vid-time">490K views 2 years ago</p>
                         </span>
                       </div>
                     </a>
