--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
                             height="36px"
                           />
                           <span class="vid-title text-light fs-6 mb-1"
-                            >TSM Entity WE ARE READY....again - PMPL 2020
+                            >TSM Entity W ARE READY....again - PMPL 2020
                             Teaser</span
                           >
                         </span>
