--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <li class="nav-item search-bar">
               <form class="d-flex" role="search">
                 <input
-                  class="search-input form-control"
+                  class="search-input form-control text-light"
                   type="search"
                   placeholder="Search"
                   aria-label="Search"
@@ -959,7 +959,7 @@
 
                         <span class="channel-details text-secondary">
                           <span class="channel-name">Mumbai Indians</span>
-                          <p class="vid-time">126K views 4 days ago</p>
+                          <p class="vid-time">137K views 5 days ago</p>
                         </span>
                       </div>
                     </a>
