--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
 
                         <span class="channel-details text-secondary">
                           <span class="channel-name">KRSNA</span>
-                          <p class="vid-time">18M views 10 months ago</p>
+                          <p class="vid-time">19M views 11 months ago</p>
                         </span>
                       </div>
                     </a>
@@ -854,7 +854,7 @@
 
                         <span class="channel-details text-secondary">
                           <span class="channel-name">Kunal Kamra</span>
-                          <p class="vid-time">24M views 3 years ago</p>
+                          <p class="vid-time">24M views 4 years ago</p>
                         </span>
                       </div>
                     </a>
@@ -890,7 +890,7 @@
 
                         <span class="channel-details text-secondary">
                           <span class="channel-name">Crave Uzumaki</span>
-                          <p class="vid-time">1.2M views 2 months ago</p>
+                          <p class="vid-time">30K views 3 months ago</p>
                         </span>
                       </div>
                     </a>
@@ -947,7 +947,7 @@
                       <div class="vid-details mt-2">
                         <span class="d-flex">
                           <img
-                            src="https://yt3.ggpht.com/Uua-sDZCxzAO6BpTear-IfPqSuCgfv6MY1i1VsigjSf1FU1PmBUGSH_mKJT1w5lD2VUCWjpoDug=s68-c-k-c0x00ffffff-no-rj"
+                            src="https://yt3.ggpht.com/6qLd1-g_4GOfNAlBnn1i6C9C6jlEfW8loEHyFxzsCXhGLIRkZhKPlBJt6txeOofN4GpmUCnv5Q=s88-c-k-c0x00ffffff-no-rj"
                             class="profile-icon channel-logo"
                             width="36px"
                             height="36px"
@@ -960,7 +960,7 @@
 
                         <span class="channel-details text-secondary">
                           <span class="channel-name">Mumbai Indians</span>
-                          <p class="vid-time">137K views 5 days ago</p>
+                          <p class="vid-time">272K views 2 weeks ago</p>
                         </span>
                       </div>
                     </a>
