--- a/index.html
+++ b/index.html
@@ -624,17 +624,17 @@
             <li class="nav-item">
               <a
                 class="nav-link d-flex align-items-center text-light gap-4"
-                href="https://www.youtube.com/@codekaro8133"
+                href="https://www.youtube.com/@DynamoGaming"
                 target="_blank"
               >
                 <span>
                   <img
-                    src="https://yt3.ggpht.com/ytc/AL5GRJXecRCAX1Fch3gRO7JaXHp5sXg_maOkr71WcleuGQ=s88-c-k-c0x00ffffff-no-rj"
+                    src="https://yt3.ggpht.com/ytc/AGIKgqNo_zlpnYpU46GSs8zWfL4aKedRSxopyN1xFVT0Yg=s176-c-k-c0x00ffffff-no-rj"
                     class="profile-icon"
                     width="24px"
                   />
                 </span>
-                <span>Codekaro</span>
+                <span>Dynamo Gaming</span>
               </a>
             </li>
 
@@ -705,17 +705,17 @@
             <li class="nav-item">
               <a
                 class="nav-link d-flex align-items-center text-light gap-4"
-                href="https://www.youtube.com/@Hamza97"
+                href="https://www.youtube.com/@BeerBiceps"
                 target="_blank"
               >
                 <span>
                   <img
-                    src="https://yt3.ggpht.com/RbqjE4972sIFlsmmpxKUDx45tW2TUQQincDHszFasV-V5TddFbt5JKYtz_KBQ-u3NrAZ2K-96A8=s88-c-k-c0x00ffffff-no-rj"
+                    src="https://yt3.ggpht.com/4syhBAa6d4sK_J8YxhRFHDyARee3qoR2bUtGMtRDyyVncFn41bSHUDf-FNmvcu3TD2JwowD8sA=s176-c-k-c0x00ffffff-no-rj"
                     class="profile-icon"
                     width="24px"
                   />
                 </span>
-                <span>Hamza</span>
+                <span>BeerBiceps</span>
               </a>
             </li>
           </ul>
